--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="no">No</string>
     <string name="yes">Yes</string>
     <string name="are_you_sure_that_you_want_to_delete_this_passenger">Are you sure that you want to delete this passenger ?</string>
+    <string name="pick_image_intent_text">Pick your photo</string>
 </resources>
